# conduitExercices

./: CHANGELOG.md  README.md  conduitToy.cabal
app/: Main.hs
